--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="ColorWheelDemoSilverlight.MainPage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
              xmlns:local="clr-namespace:ColorWheelDemoSilverlight"
+             xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit"
+             x:Class="ColorWheelDemoSilverlight.MainPage"
+             mc:Ignorable="d"
              d:DesignHeight="600"
              d:DesignWidth="600">
     <UserControl.Resources>
@@ -16,45 +17,102 @@
                              x:Key="BlueConverter" />
     </UserControl.Resources>
 
-    <Grid x:Name="LayoutRoot" Background="White">
+    <Grid x:Name="LayoutRoot"
+          Background="White">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <local:HsvWheelColorPicker x:Name="hsvWheelColorPicker">
+        <local:HsvWheelColorPalette x:Name="hsvWheelColorPicker">
             <local:ColorPoint x:Name="colorPoint"
                               Color="LightGreen" />
             <local:ColorPoint Color="Red" />
-        </local:HsvWheelColorPicker>
+        </local:HsvWheelColorPalette>
         <StackPanel Grid.Row="1">
             <Grid Margin="5">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Rgb" Margin="5,0"/>
-                <Line  Grid.Column="1" Stretch="Fill" 
+                <TextBlock Text="Rgb"
+                           Margin="5,0" />
+                <Line  Grid.Column="1"
+                       Stretch="Fill"
                        X2="1"
                        StrokeThickness="1"
                        Stroke="Black"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center" />
             </Grid>
-            <local:ColorGradient Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker}"
-                                 Minimum="0"
-                                 Maximum="255"
-                                 Height="25"
-                                 ColorConverter="{StaticResource RedConverter}" />
-            <local:ColorGradient Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker}"
-                                 Minimum="0"
-                                 Maximum="255"
-                                 Height="25"
-                                 ColorConverter="{StaticResource GreenConverter}" />
-            <local:ColorGradient Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker}"
-                                 Minimum="0"
-                                 Maximum="255"
-                                 Height="25"
-                                 ColorConverter="{StaticResource BlueConverter}" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Red:" VerticalAlignment="Center" />
+                <local:ColorGradient Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker,Mode=TwoWay}"
+                                     Minimum="0"
+                                     Maximum="255"
+                                     Height="25"
+                                     ColorConverter="{StaticResource RedConverter}" 
+                                     Grid.Column="1"/>
+                <local:ColorChannelTextBox Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker,Mode=TwoWay}"
+                                           Minimum="0"
+                                           Maximum="255"
+                                           ColorConverter="{StaticResource RedConverter}"
+                                           Grid.Column="2"/>
+
+                <TextBlock Text="Green:"
+                           VerticalAlignment="Center" 
+                           Grid.Row="1"/>
+
+                <local:ColorGradient Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker,Mode=TwoWay}"
+                                     Minimum="0"
+                                     Maximum="255"
+                                     Height="25"
+                                     ColorConverter="{StaticResource GreenConverter}"
+                                     Grid.Row="1"
+                                     Grid.Column="1" />
+
+                <local:ColorChannelTextBox Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker,Mode=TwoWay}"
+                                           Minimum="0"
+                                           Maximum="255"
+                                           ColorConverter="{StaticResource GreenConverter}"
+                                           Grid.Column="2"
+                                           Grid.Row="1"/>
+
+                <TextBlock Text="Blue:"
+                           VerticalAlignment="Center"
+                           Grid.Row="2" />
+
+
+                <local:ColorGradient Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker,Mode=TwoWay}"
+                                     Minimum="0"
+                                     Maximum="255"
+                                     Height="25"
+                                     ColorConverter="{StaticResource BlueConverter}"
+                                     Grid.Row="2"
+                                     Grid.Column="1" />
+
+
+                <local:ColorChannelTextBox Color="{Binding ColorPoints[0].Color, ElementName=hsvWheelColorPicker,Mode=TwoWay}"
+                                           Minimum="0"
+                                           Maximum="255"
+                                           ColorConverter="{StaticResource BlueConverter}"
+                                           Grid.Column="2"
+                                           Grid.Row="2" />
+            </Grid>
+            
+         
+         
         </StackPanel>
+
+       
 
     </Grid>
 </UserControl>
