--- a/ButtonDemo/ButtonDemo/MainPage.xaml
+++ b/ButtonDemo/ButtonDemo/MainPage.xaml
@@ -11,7 +11,7 @@
         <Grid 
               HorizontalAlignment="Center"
               VerticalAlignment="Center">
-            <TextBlock Text="Button"
+            <Button Content="Button"
                        x:Name="Button"
                        Foreground="White"
                        PointerPressed="Button_PointerPressed"
