--- a/ColorWheelDemoSilverlight/ColorWheelUwp/Themes/Generic.xaml
+++ b/ColorWheelDemoSilverlight/ColorWheelUwp/Themes/Generic.xaml
@@ -60,14 +60,14 @@
                                 <DataTemplate x:DataType="local:ColorPoint">
                                     <Grid x:Name="ItemTemplateRoot" >
                                         <Grid.Resources>
-                                            <local:ColorPoint x:Name="c"/>
+                                            <!--<local:ColorPoint x:Name="c"/>-->
                                             <local:ColorAndRadiusToTransformXBridge x:Key="SaturationAndRadiusToTransformXBridge"
                                                                                     AttachedElement="{Binding ElementName=ItemTemplateRoot}"
                                                                                     Color="{Binding ElementName=ItemTemplateRoot,Path=DataContext.Color}" />
 
                                             <local:ColorAndRadiusToTransformXBridge x:Key="SaturationAndRadiusToTransformXBridge2"
                                                                                     AttachedElement="{Binding ElementName=ItemTemplateRoot}"
-                                                                                    Color="{Binding Color, Source={StaticResource c}}" />
+                                                                                    Color="{Binding Color,RelativeSource={ RelativeSource Mode=}}" />
                                         </Grid.Resources>
                                         <local:ColorPointVisual HorizontalAlignment="Center"
                                                                 VerticalAlignment="Center"
