--- a/ExpanderSample/ExpanderSampleSilverlight/Themes/Generic.xaml
+++ b/ExpanderSample/ExpanderSampleSilverlight/Themes/Generic.xaml
@@ -29,6 +29,7 @@
                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                       Margin="0"
+                                      Content="{TemplateBinding Content}"
                                       ContentTemplate="{TemplateBinding ContentTemplate}" />
                 </ControlTemplate>
             </Setter.Value>
