--- a/ExpanderSample/ExpanderSampleSilverlight/MainPage.xaml
+++ b/ExpanderSample/ExpanderSampleSilverlight/MainPage.xaml
@@ -8,8 +8,8 @@
     d:DesignHeight="300" d:DesignWidth="400">
 
     <Grid x:Name="LayoutRoot" Background="White">
-        <local:ExpandableContentControl Percentage="0.3">
-            <TextBlock Text="TextBlock"/>
+        <local:ExpandableContentControl Percentage="0.2">
+            <TextBlock Text="TextBlock" FontSize="100"/>
         </local:ExpandableContentControl>
     </Grid>
 </UserControl>
